--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <header class="header">
   <div class="rd-navbar-wrap">
     <nav class="rd-navbar" data-rd-navbar-lg="rd-navbar-static">
-      <div class="rd-navbar-collapse">
+      <div class="rd-navbar-collapse header__panel-dark">
         <button class="rd-navbar-collapse-toggle"><span></span></button>
         <ul class="rd-navbar-collapse-items list">
           <li>
@@ -164,7 +164,96 @@
     </nav>
   </div>
 </header>
+<section class="slider">
+  <div class="camera_container">
+    <div id="camera" class="camera_wrap">
+      <div data-src="dist/images/bg.jpg">
+        <div class="camera_caption fadeIn">
+          <div class="container">
+            <div class="row">
+              <div class="col-md-4 col-md-offset-8 bg-secondary skew-right">
+                <div class="bg-secondary__caption">
+                  <h2>Трубы
+                    специального
+                    назначения</h2>
+                  <div class="bg-secondary__description">
+                    <p>Высококачественная металлическая и стальная труба от производителя</p>
+                  </div>
+
+                  <a class="btn btn_big btn_orange" href='#'>Read more</a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div data-src="dist/images/bg2.jpg">
+        <div class="camera_caption fadeIn">
+          <div class="container">
+            <div class="row">
+              <div class="col-md-4 col-md-offset-8 bg-secondary skew-right">
+                <div class="bg-secondary__caption">
+                  <h1>A large
+                    assortment of
+                    steel products</h1>
+
+                  <p>Lorem ipsum dolor sit amet conse ctetur adipisicing elit, sed do eiusmod
+                    tempor
+                    incididunt.</p>
+
+                  <a class="btn btn-danger" href='#'>Read more</a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div data-src="dist/images/bg3.jpg">
+        <div class="camera_caption fadeIn">
+          <div class="container">
+            <div class="row">
+              <div class="col-md-4 col-md-offset-8 bg-secondary skew-right">
+                <div class="bg-secondary__caption">
+                  <h1>A large
+                    assortment of
+                    steel products</h1>
+
+                  <p>Lorem ipsum dolor sit amet conse ctetur adipisicing elit, sed do eiusmod
+                    tempor
+                    incididunt.</p>
+
+                  <a class="btn btn-danger" href='#'>Read more</a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus alias, at aut beatae consectetur, cum dolore est eveniet expedita facilis magnam magni modi mollitia nemo porro possimus quaerat quam repellendus sed sint sunt ut voluptatum. Accusantium aspernatur at aut autem blanditiis ducimus ea facere harum illum inventore iste itaque iure maiores maxime mollitia necessitatibus neque nihil nisi nulla numquam officiis, quae quas quos reiciendis repellendus rerum sint unde ut vero voluptates! At dignissimos eaque est molestiae nulla. Ad adipisci aliquam at culpa eligendi eos error ex, fugiat in labore laboriosam perferendis placeat, possimus quam quibusdam quisquam quod veniam? Accusamus, commodi culpa dicta doloremque doloribus ducimus eaque eos, est fuga impedit, ipsam natus nobis placeat porro quis saepe veritatis! Consectetur deserunt dolor fugiat incidunt ipsum itaque nesciunt, pariatur perspiciatis praesentium, sapiente soluta vero! Architecto atque autem, dolores eius magni officiis possimus. A eaque modi nemo, optio reiciendis similique. A architecto commodi dicta eos hic labore laudantium magni maxime, modi mollitia nobis praesentium quam reiciendis rem, repudiandae temporibus veritatis voluptatibus! Ab accusantium alias at consequuntur cum deleniti doloremque eaque exercitationem facere hic illo illum in itaque neque non nostrum numquam odio omnis, porro praesentium quas quasi quibusdam quo quod quos rerum sed sequi suscipit tempora tenetur unde, velit voluptate voluptatum? Ducimus iure libero magni nemo odio porro, quod sequi. Ab ad adipisci aperiam architecto aspernatur blanditiis commodi dicta dolorem doloribus dolorum earum est eveniet excepturi expedita explicabo fugiat id illum in, ipsum iste iusto, labore magni maxime minus nam omnis placeat quae quasi quia quod quos repellendus repudiandae sapiente sint tenetur veritatis voluptatum! A asperiores aut consequuntur dolore dolorum eius esse eum excepturi fugiat, nisi optio perferendis porro quidem quis, tempora. Dolores eum ipsum nostrum! Ab aliquam amet aut autem culpa distinctio dolor dolorem doloremque dolorum ea eius error fugiat fugit hic, illo in inventore iure labore molestiae, nesciunt nulla pariatur perspiciatis quae quaerat quidem quo ratione repellat repellendus soluta tempora, tempore temporibus totam unde velit vitae voluptatibus voluptatum! Aperiam aspernatur blanditiis consequuntur corporis cupiditate doloremque dolores eos, libero nobis omnis quas quos saepe, soluta tenetur velit. Accusamus architecto atque autem culpa cumque dolor ea eaque eligendi fuga fugit impedit iure laborum magni molestiae, molestias natus nisi officia perferendis quasi qui quidem repellendus rerum sed ullam veniam? Ad deserunt dolor ducimus earum eos facere laboriosam molestias nesciunt, non nulla possimus quasi qui quia rerum soluta totam vero! Dolorum est impedit voluptatum. Dolor dolorem enim harum ratione veniam! Ad dolorem doloremque minus molestias mollitia neque praesentium ratione suscipit unde? A consequatur consequuntur cum ducimus, eum excepturi facere facilis in incidunt laborum libero maiores, molestias nemo nihil, nulla officiis rerum. Aperiam, consequuntur exercitationem ipsum mollitia reprehenderit similique temporibus. Amet aut doloribus ipsam laudantium libero odit sit, temporibus. Adipisci assumenda beatae commodi dolor eligendi minima molestias, quis suscipit vero! Inventore magnam neque obcaecati quisquam sequi? Beatae commodi doloribus enim id iure laudantium libero perferendis porro quia sed. Ducimus et fuga ipsum non officia unde vel? Dolore, saepe, voluptas. Accusamus alias aliquam atque dicta doloremque dolorum eligendi eum fugit illo magnam minus perferendis praesentium, quidem quod rem tenetur unde! Aliquid at beatae, deserunt dicta dolore doloremque dolores dolorum eligendi eos esse et, eveniet excepturi harum id, impedit ipsum itaque laudantium molestiae natus nesciunt officia officiis pariatur porro quam quibusdam quidem quis quod sequi similique sunt temporibus ullam vel voluptatibus? Aliquam illum laboriosam modi officia, omnis quo suscipit ut veritatis. Accusamus adipisci alias animi at aut blanditiis cupiditate deleniti dolorem doloremque doloribus dolorum ea eos esse et eum eveniet expedita inventore labore magnam magni modi molestiae necessitatibus nemo, neque nobis officia officiis pariatur placeat praesentium quae quibusdam quisquam ratione reiciendis sapiente soluta sunt vitae? Accusamus accusantium adipisci asperiores aspernatur beatae consequatur consequuntur dicta dolorum, eaque earum eius eveniet exercitationem impedit ipsa laboriosam laudantium magnam maxime neque odio officia omnis optio praesentium qui quia quo recusandae reiciendis reprehenderit saepe sit sunt tenetur totam voluptas voluptatibus! Error odio sequi suscipit tenetur voluptas! Ad aspernatur blanditiis, consequuntur dolor doloremque esse harum, ipsa magnam, officiis perferendis perspiciatis quos reiciendis reprehenderit suscipit vel veritatis voluptatibus. A amet dolore enim laboriosam nisi quibusdam repellat. Aliquam nisi nostrum quos. Autem error est exercitationem, iste, iure iusto libero magni numquam pariatur porro quae quasi reiciendis repudiandae sed veniam voluptas voluptatibus? Ad aperiam blanditiis consequuntur culpa, debitis deserunt distinctio eaque excepturi ipsam labore laboriosam necessitatibus, nemo neque nisi optio pariatur quam quisquam reprehenderit sit, veritatis. Accusamus accusantium amet, aperiam, asperiores aspernatur at deserunt doloremque dolores excepturi exercitationem id illo illum itaque porro praesentium quidem ratione tenetur voluptatem. Ad aliquam aliquid animi architecto, aspernatur at culpa dicta ducimus earum eos fugiat ipsam labore magnam neque nobis nostrum numquam odio officia perferendis perspiciatis porro quaerat quam qui quo repudiandae sequi soluta veritatis vitae voluptas voluptatum. Deleniti dolorem ea eos hic illo impedit in ipsa minima nemo nihil quisquam quos reprehenderit soluta tempore, vel voluptas, voluptate? Ad assumenda cum doloremque eum iure molestiae, nesciunt voluptatibus! Aperiam cupiditate deleniti ea eos fugit, laudantium minus reiciendis repudiandae sed tempora vero vitae voluptatum. Aperiam asperiores aut autem commodi cum cumque debitis deserunt doloribus ducimus ea excepturi fugiat id ipsa labore laborum maiores minus molestiae nam nostrum, perferendis perspiciatis provident repellat repudiandae sapiente totam velit voluptatibus voluptatum. Aspernatur dicta dolore exercitationem fugit iusto nisi quia vel. Doloremque dolorum esse itaque maiores, molestias necessitatibus, nesciunt nihil nisi obcaecati quae ratione reiciendis, rem repellendus reprehenderit sed ullam vitae? Autem cupiditate deleniti dolores illo ipsa itaque laboriosam minus modi natus, nihil omnis praesentium recusandae repellat sunt suscipit tempora unde voluptates voluptatibus! Alias beatae, deserunt dolorem dolores error harum id inventore nobis obcaecati odit optio quidem reiciendis repellendus repudiandae saepe, sapiente sit velit. Accusantium aliquid aut natus odio quae rem voluptatibus. Accusamus esse laudantium ullam velit. Deleniti doloremque esse est exercitationem explicabo hic pariatur repellat, vitae! Aspernatur beatae cum debitis, impedit inventore ipsum minus nam perferendis placeat quibusdam quisquam recusandae rem sit veniam voluptate voluptatibus voluptatum? Ab alias at autem beatae cum dolor error et excepturi illum, incidunt ipsam laborum minus modi molestias odit provident quos reprehenderit sint temporibus ut vel, vitae voluptates. Accusamus accusantium ad alias aperiam architecto, aut cupiditate delectus doloribus earum enim et, expedita explicabo harum ipsam itaque iusto molestiae odio pariatur quam qui repellat repudiandae sit tempora ullam vero vitae voluptate? Dignissimos distinctio excepturi magnam minus praesentium, quasi suscipit voluptatibus. Esse eveniet id illo magnam maiores nobis quas totam veniam veritatis voluptate? Alias atque eligendi eos ipsum quae quaerat, rerum sunt? A blanditiis earum excepturi exercitationem perspiciatis, quae quo sequi sunt tempora veniam. Animi culpa cumque iure, maxime neque nesciunt voluptas. Accusantium ad adipisci aperiam asperiores beatae culpa debitis deleniti deserunt dicta doloribus eum fugiat illo, iure laudantium libero magnam, neque nobis odio omnis pariatur perspiciatis possimus quis quisquam reiciendis sint tempore velit vero voluptatem voluptatibus voluptatum? Asperiores assumenda, aut culpa, distinctio eaque ex, iure maxime mollitia quam quia reiciendis similique tempore tenetur velit voluptas. Adipisci amet at consequatur dolore, eaque fuga magnam officia rerum sit vitae. Alias consectetur excepturi facilis ipsam nemo repudiandae, suscipit. Ab accusantium ad adipisci, alias aperiam at aut consequuntur corporis earum ex illo ipsam iste itaque laboriosam, molestiae mollitia natus neque nobis nostrum nulla perspiciatis quam quas quod repellendus repudiandae rerum sed sint temporibus unde voluptate! Adipisci animi aperiam asperiores aut distinctio dolore eaque enim error esse ex facere, illum minima necessitatibus nihil ratione, reiciendis reprehenderit saepe similique tenetur unde ut velit vitae voluptatem. Ad aliquam at consequatur facere fuga in laborum officia ratione. Ad alias consequatur cum cumque doloremque excepturi expedita ipsa ipsam, laboriosam, maxime nisi nulla odit perferendis quaerat qui quia quibusdam quo sint suscipit, tenetur totam veniam vitae voluptates. Amet asperiores autem cum dolorem ex facere libero nihil nostrum officiis optio, quas quibusdam sint, ullam, veniam veritatis. Aspernatur beatae esse illum laboriosam libero nobis non obcaecati pariatur porro, quasi recusandae sed tenetur veritatis! Accusantium soluta, vero. Dicta dolorem, dolores eaque earum ex non quaerat quam quos sunt voluptate? Accusamus commodi consectetur corporis, culpa debitis delectus deleniti et, eum illo, impedit necessitatibus porro possimus repudiandae sint voluptate! Amet aperiam debitis facere nobis quaerat reiciendis sequi, voluptas! Enim et exercitationem iure mollitia sapiente. Dolore eligendi et eveniet labore temporibus? Aliquid assumenda, consectetur deleniti dolorum modi tempora. Asperiores eveniet provident voluptate? Adipisci alias aliquid atque dicta dolor dolorem, enim error est ex, magnam maxime modi nemo numquam officia perferendis quia quos, recusandae sit velit voluptatem. Accusamus beatae consequatur consequuntur cum distinctio dolor eaque, eius labore laudantium libero maxime minus molestiae molestias nisi non odit praesentium quo, repellat totam veritatis. Asperiores beatae consectetur dignissimos dolorem, dolores eos facere fugiat ipsa iusto mollitia quis rem. Adipisci beatae delectus distinctio dolores ducimus facere fugiat harum id, ipsam labore modi odio perferendis quae, quibusdam repudiandae sapiente, totam! A ad adipisci blanditiis corporis culpa cum dignissimos dolore dolorem dolores error explicabo id in incidunt maxime minima natus nesciunt nisi, nobis non numquam odit provident quasi quia sed soluta veritatis voluptatem? Aliquid asperiores laudantium mollitia quam quod repellat tempora vitae. Aperiam eligendi in nesciunt perferendis rerum! Animi, dignissimos eligendi ex exercitationem optio quae repellendus. Alias beatae cum distinctio fugit illo qui repellendus sit, unde vel velit? A cum deserunt doloribus eligendi enim et eveniet ex fugit in, ipsa ipsum iste iusto labore minus nam natus recusandae totam veritatis voluptatem voluptatibus. Ab accusamus adipisci blanditiis consequatur dolore doloremque eaque eligendi eos expedita facilis fuga illo illum itaque laborum libero maiores obcaecati, quam quasi qui repudiandae rerum sapiente soluta totam ut velit voluptatem voluptatum. Asperiores delectus dicta dolores iste magnam modi odio porro qui, rem repellat tempore velit vero voluptatibus. A adipisci aliquid amet animi commodi consectetur corporis deleniti distinctio dolorem doloremque eligendi, explicabo laborum modi necessitatibus nostrum odio quaerat quibusdam quod quos sunt suscipit ullam unde velit voluptatibus voluptatum! Alias architecto aut blanditiis cupiditate dolore eaque eligendi eos exercitationem fuga hic in libero, maxime mollitia nemo nulla quisquam quos ratione repellendus similique sunt tempora voluptate voluptatibus! Aspernatur, nulla velit! Alias aliquam aspernatur aut deserunt dicta distinctio earum et ex, illo itaque libero, mollitia non officia officiis quae quos reiciendis saepe sequi sunt totam vel velit voluptatem. Ab doloribus, id in neque officia praesentium quaerat rerum ullam ut voluptates? Animi cumque dignissimos id illo numquam perspiciatis quo sed vero voluptas! Ad at dicta dignissimos dolor, dolores dolorum ducimus eaque excepturi id illum iusto labore minima minus mollitia nesciunt non quaerat, reiciendis rerum temporibus ullam velit veniam veritatis voluptates? Accusamus adipisci, aspernatur dolores excepturi exercitationem explicabo hic in ipsa labore magnam nemo nesciunt non praesentium quod rem, rerum sapiente sed sequi! Deserunt, doloribus eius laudantium minima quae quam voluptate. Accusantium aliquam amet aperiam beatae commodi consequatur cumque cupiditate, distinctio dolorem enim esse eveniet explicabo facere facilis in inventore ipsa laudantium maiores molestiae, porro quas quisquam reiciendis repudiandae sapiente totam ut voluptates voluptatum? Ab accusantium animi consequatur culpa dignissimos, dolores error eveniet excepturi illum, maiores natus nesciunt omnis qui sapiente sunt totam voluptas? Ab, accusantium animi aperiam aspernatur at aut autem corporis cupiditate delectus earum esse eveniet expedita fugiat id, ipsum iusto libero magni maiores maxime mollitia neque nostrum, obcaecati optio provident qui quia quod ratione repellendus sint totam unde vel velit voluptates. Amet dicta itaque minus natus nulla quasi reprehenderit tempore! Aperiam eius maiores pariatur voluptatem? At nam nesciunt, obcaecati quas quis sunt. Ab aliquid amet aspernatur at atque aut autem beatae blanditiis consequatur cupiditate distinctio dolores doloribus, error est fugiat id incidunt iusto molestiae nam officia perferendis placeat provident quibusdam quo recusandae, reiciendis saepe sequi sint sit soluta sunt temporibus totam, velit voluptate voluptates voluptatibus voluptatum. Ab accusamus architecto beatae consequatur eius eligendi exercitationem illum in labore laudantium minus natus nemo quasi quisquam, repellat repellendus voluptatem. Accusamus adipisci aliquid, asperiores blanditiis debitis deleniti deserunt dolorem eaque earum eius enim esse eum ex exercitationem facilis, fuga fugiat incidunt ipsum iste iusto laudantium officiis porro praesentium quidem quis ratione reiciendis reprehenderit rerum sed voluptates? At corporis, deleniti distinctio error expedita ipsam iste laboriosam neque pariatur, perferendis provident quas tempora temporibus. Ab amet consectetur doloremque, eaque eum hic iure neque nostrum odio quasi quod rerum totam vero voluptate voluptatum!</p>
+<footer class="footer">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-9">
+        <p>ООО «Спецтруб»</p>
+        <p>123022, г. Москва, ул. 2-я Звенигородская, д. 13, стр. 42</p>
+      </div>
+      <div class="col-md-3">
+        <p>Телефон: <a href="tel:+74956447589">+7(495)644-75-89</a></p>
+        <p>Email: <a href='mailto:speztrub@gmail.com'>speztrub@gmail.com</a></p>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-12">
+        <div class="footer__copyright">
+          © <span id="copyright-year"></span>. Все права защизены. <a href="#">Политика обработки персональных данных</a>.
+        </div>
+      </div>
+    </div>
+  </div>
+</footer>
 <script src="dist/js/lib.js"></script>
 <script src="dist/js/main.js"></script>
 </body>
