--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
 <section class="slider">
   <div class="camera_container">
     <div id="camera" class="camera_wrap">
-      <div data-src="dist/images/bg.jpg">
+      <div data-src="dist/images/bg-slider-one.jpg">
         <div class="camera_caption fadeIn">
           <div class="container">
             <div class="row">
@@ -179,29 +179,30 @@
                   <div class="bg-secondary__description">
                     <p>Высококачественная металлическая и стальная труба от производителя</p>
                   </div>
-
-                  <a class="btn btn_big btn_orange" href='#'>Read more</a>
+                  <div class="bg-secondary__wrapper-btn">
+                    <a class="btn btn_big btn_orange" href='#'>Онлайн заказ</a>
+                  </div>
                 </div>
               </div>
             </div>
           </div>
         </div>
       </div>
-      <div data-src="dist/images/bg2.jpg">
+      <div data-src="dist/images/bg-slider-two.jpg">
         <div class="camera_caption fadeIn">
           <div class="container">
             <div class="row">
               <div class="col-md-4 col-md-offset-8 bg-secondary skew-right">
                 <div class="bg-secondary__caption">
-                  <h1>A large
-                    assortment of
-                    steel products</h1>
-
-                  <p>Lorem ipsum dolor sit amet conse ctetur adipisicing elit, sed do eiusmod
-                    tempor
-                    incididunt.</p>
-
-                  <a class="btn btn-danger" href='#'>Read more</a>
+                  <h2>Трубы
+                    специального
+                    назначения</h2>
+                  <div class="bg-secondary__description">
+                    <p>Высококачественная металлическая и стальная труба от производителя</p>
+                  </div>
+                  <div class="bg-secondary__wrapper-btn">
+                    <a class="btn btn_big btn_orange" href='#'>Онлайн заказ</a>
+                  </div>
                 </div>
               </div>
             </div>
@@ -214,15 +215,15 @@
             <div class="row">
               <div class="col-md-4 col-md-offset-8 bg-secondary skew-right">
                 <div class="bg-secondary__caption">
-                  <h1>A large
-                    assortment of
-                    steel products</h1>
-
-                  <p>Lorem ipsum dolor sit amet conse ctetur adipisicing elit, sed do eiusmod
-                    tempor
-                    incididunt.</p>
-
-                  <a class="btn btn-danger" href='#'>Read more</a>
+                  <h2>Трубы
+                    специального
+                    назначения</h2>
+                  <div class="bg-secondary__description">
+                    <p>Высококачественная металлическая и стальная труба от производителя</p>
+                  </div>
+                  <div class="bg-secondary__wrapper-btn">
+                    <a class="btn btn_big btn_orange" href='#'>Онлайн заказ</a>
+                  </div>
                 </div>
               </div>
             </div>
