--- a/index.html
+++ b/index.html
@@ -169,6 +169,26 @@
 <section class="slider">
   <div class="camera_container">
     <div id="camera" class="camera_wrap">
+      <div data-src="dist/images/slider-new.jpg">
+        <div class="camera_caption fadeIn">
+          <div class="container">
+            <div class="row">
+              <div class="col-md-4 col-md-offset-8 bg-secondary skew-right">
+                <div class="bg-secondary__caption">
+                  <h2>Производство
+                    колонковых труб</h2>
+                  <div class="bg-secondary__description">
+                    <p>Высококачественные стальные трубы от производителя</p>
+                  </div>
+                  <div class="bg-secondary__wrapper-btn">
+                    <a class="btn btn_big btn_orange" href='#' data-toggle="modal" data-target="#myModal">Онлайн заказ</a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
       <div data-src="dist/images/bg-slider-two.jpg">
         <div class="camera_caption fadeIn">
           <div class="container">
@@ -304,6 +324,42 @@
           <img src="dist/images/product-dril-4.jpg" alt="">
           <div class="catalog__item-body">
             <h5 class="catalog__item-heading">Трубы бурильные</h5>
+            <span class="catalog__item-body-angle">
+              <span class="catalog__item-body-angle_top"></span>
+              <span class="catalog__item-body-angle_bottom"></span>
+            </span>
+          </div>
+        </a>
+      </div>
+      <div class="col-md-4 col-sm-6">
+        <a href="product-k.html" class="catalog__item wow fadeInUp">
+          <img src="dist/images/product-tk-2.jpg" alt="">
+          <div class="catalog__item-body">
+            <h5 class="catalog__item-heading">Трубы колонковые</h5>
+            <span class="catalog__item-body-angle">
+              <span class="catalog__item-body-angle_top"></span>
+              <span class="catalog__item-body-angle_bottom"></span>
+            </span>
+          </div>
+        </a>
+      </div>
+      <div class="col-md-4 col-sm-6">
+        <a href="#" class="catalog__item wow fadeInUp" data-wow-delay="0.2s">
+          <img src="dist/images/product-obsadnye.jpg" alt="">
+          <div class="catalog__item-body">
+            <h5 class="catalog__item-heading">Трубы обсадные</h5>
+            <span class="catalog__item-body-angle">
+              <span class="catalog__item-body-angle_top"></span>
+              <span class="catalog__item-body-angle_bottom"></span>
+            </span>
+          </div>
+        </a>
+      </div>
+      <div class="col-md-4 col-sm-6">
+        <a href="#" class="catalog__item wow fadeInUp" data-wow-delay="0.4s">
+          <img src="dist/images/product-antikor.jpg" alt="">
+          <div class="catalog__item-body">
+            <h5 class="catalog__item-heading">Трубы с покрытием</h5>
             <span class="catalog__item-body-angle">
               <span class="catalog__item-body-angle_top"></span>
               <span class="catalog__item-body-angle_bottom"></span>
